--- a/src/taskpane/taskpaneReg.html
+++ b/src/taskpane/taskpaneReg.html
@@ -8,5 +8,11 @@
     <title>Crazy_Squirrels</title>   
 </head>   
 <body>
-    
+    <div class="header">
+        <h2 style="margin:5px">To do List</h2>
+        <input type="text" id="myInput" placeholder="Title...">
+        <span onclick="newElement()" class="addBtn">Add</span>
+    </div>   
 </body>
+
+
