--- a/src/taskpane/taskpaneReg.html
+++ b/src/taskpane/taskpaneReg.html
@@ -5,14 +5,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content+width="device-width, initial-scale=1">
 
-    <title>Crazy_Squirrels</title>   
+    <title>Crazy Squirrels</title>   
 </head>   
 <body>
-    <div class="header">
-        <h2 style="margin:5px">To do List</h2>
-        <input type="text" id="myInput" placeholder="Title...">
-        <span onclick="newElement()" class="addBtn">Add</span>
-    </div>   
+    <header class="jumbotrom jumbotrom-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 col-md-2 align-self-center">
+                <!--replace log
+                <a href="taskpane.html"><img src+"img/logo.png" class="img-fluid" />
+                -->
+                </div>
+                <div class="col">
+                  <h1>Crazy Squirrels</h1>
+                </div>
+            </div>
+        </div>
+    
 </body>
 
 
