--- a/src/taskpane/taskpaneReg.html
+++ b/src/taskpane/taskpaneReg.html
@@ -21,6 +21,17 @@
                 </div>
             </div>
         </div>
+        <div class="modal-body">
+            <div class="container-fluid">
+                <form>
+                   <div class="form-row">
+                       <div class="form-group col-12">
+                         <label class="sr-only" for="loginEmail">Email address</label>
+                         <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
+                       </div>
+                   </div>
+            </div>
+        </div>
     
 </body>
 
