--- a/src/taskpane/taskpaneReg.html
+++ b/src/taskpane/taskpaneReg.html
@@ -29,6 +29,10 @@
                          <label class="sr-only" for="loginEmail">Email address</label>
                          <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
                        </div>
+                        <div class="form-group col-12">
+                           <label class="sr-only" for="loginPassword">Password</label>
+                           <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Password">
+                        </div>  
                    </div>
             </div>
         </div>
