--- a/src/taskpane/taskpaneReg.html
+++ b/src/taskpane/taskpaneReg.html
@@ -33,6 +33,13 @@
                            <label class="sr-only" for="loginPassword">Password</label>
                            <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Password">
                         </div>  
+                        <div class="col">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox">
+                                <label class="form-check-label"> Remember me</label>
+                        </div> 
+                    </div>
+                </div>      
                    </div>
             </div>
         </div>
