--- a/src/taskpane/taskpaneReg.html
+++ b/src/taskpane/taskpaneReg.html
@@ -9,7 +9,7 @@
 </head>   
 <body>
     <header class="jumbotrom jumbotrom-fluid">
-        <div class="container">
+      <div class="container">
             <div class="row">
                 <div class="col-4 col-md-2 align-self-center">
                 <!--replace log
@@ -26,9 +26,9 @@
                 <form>
                    <div class="form-row">
                        <div class="form-group col-12">
-                         <label class="sr-only" for="loginEmail">Email address</label>
-                         <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
-                       </div>
+                          <label class="sr-only" for="loginEmail">Email address</label>
+                          <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
+                        </div>
                         <div class="form-group col-12">
                            <label class="sr-only" for="loginPassword">Password</label>
                            <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Password">
@@ -37,12 +37,17 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox">
                                 <label class="form-check-label"> Remember me</label>
-                        </div> 
-                    </div>
-                </div>      
-                   </div>
-            </div>
+                            </div> 
+                        </div>
+                     </div> 
+                     <div class="form-row">
+                        <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                      </div> 
+                </form>       
+             </div>
         </div>
+     </div>
     
 </body>
 
